Fix footer layout on mobile + fix plan wording + update header layout breakpoint

--- a/app/assets/scss/components/_price-table-list.scss
+++ b/app/assets/scss/components/_price-table-list.scss
@@ -96,7 +96,13 @@
   
 }
 
+.price-table__row__text {
+  text-align: left;
+}
+
 .price-table__row__variation {
+  display: flex;
+  align-items: center;
   color: var(--color-black);
 }
 
