--- a/app/assets/scss/tools/variables/_general.scss
+++ b/app/assets/scss/tools/variables/_general.scss
@@ -2,7 +2,7 @@
 // == Variables / General
 // ----------------------
 
-$header-nav-breakpoint: 450px;
+$header-nav-breakpoint: 700px;
 
 :root {
 /// ---------------------
